--- a/chatExample.css
+++ b/chatExample.css
@@ -1,1 +1,28 @@
 /* CSS declarations go here */
+#messageContainer {
+	padding:15px; 
+	max-height: 350px; 
+	overflow: auto; 
+	box-shadow: inset 0px 0px 10px #888;
+}
+
+.user-name {
+	padding-top: 0px;
+	font-weight: bold;
+	font-family: "Arial";
+}
+
+.message-date {
+	font-size: x-small;
+	font-style: italic;
+	font-family: "Courier New";
+}
+
+.message-body {
+	padding-top: 5px;
+	font-family: "Arial";
+}
+
+.message {
+	margin: 0px 0px 15px 0px;
+}
