--- a/chatExample.css
+++ b/chatExample.css
@@ -1,9 +1,9 @@
 /* CSS declarations go here */
 #messageContainer {
-	padding:15px; 
+	padding: 15px 25px 0px 25px;
 	max-height: 350px; 
 	overflow: auto; 
-	box-shadow: inset 0px 0px 10px #888;
+	box-shadow: inset 0px 0px 8px #888;
 }
 
 .user-name {
@@ -25,4 +25,12 @@
 
 .message {
 	margin: 0px 0px 15px 0px;
+	box-shadow: 0px 0px 5px #888;
+	padding: 8px;
+	overflow: auto;
+	background-color:rgba(165, 204, 255,0.3);
+	float: left;
+	clear: both;
+	max-width: 85%;
+
 }
